--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
         <h3>Final Treasure Discovery</h3>
         <div class="cmd-path">C:\EntranceGrounds\OuterWalls\InnerKeep\OpenedDoor\ForbiddenLibrary\ReadingChamber\> type Treasure.txt</div>
         <div class="treasure-content">You have discovered the ASCII Chalice!
-Follow this link to claim your reward: https://chatgpt.com/share/67fe783c-3cdc-8000-a973-4a66eac10063</div>
+Follow this link to claim your reward: https://your_teacher_s_site/treasure.html</div>
         
-        <a href="https://chatgpt.com/share/67fe783c-3cdc-8000-a973-4a66eac10063" class="treasure-link" target="_blank">🏆 CLICK HERE TO CLAIM YOUR REWARD! 🏆</a>
+        <a href="https://josuedean.github.io/ibm/treasure.html" class="treasure-link" target="_blank">🏆 CLICK HERE TO CLAIM YOUR REWARD! 🏆</a>
     </section>
 
     <section>
